{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 12,
  "lineage": "a56ec1a7-bd40-675f-2312-05c48dff7e5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudforge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:595319278112:instance/i-0f8e93bf92bdd54a2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cloudforge-dev-ec2-profile",
            "id": "i-0f8e93bf92bdd54a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02be2c740c6677387"
              }
            ],
            "primary_network_interface_id": "eni-02be2c740c6677387",
            "private_dns": "ip-10-0-1-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-3-238-158-9.compute-1.amazonaws.com",
            "public_ip": "3.238.158.9",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "AutoDestroy": "true",
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Owner": "learning",
                  "Project": "CloudForge"
                },
                "throughput": 125,
                "volume_id": "vol-093841b59f888ffc3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077ae18e28cbe507b",
            "tags": {
              "Name": "cloudforge-dev-ec2"
            },
            "tags_all": {
              "AutoDestroy": "true",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudforge-dev-ec2",
              "Owner": "learning",
              "Project": "CloudForge"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02efba3689b423945"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "595319278112",
            "id": "i-0f8e93bf92bdd54a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.cloudforge_ec2",
            "aws_iam_role.cloudforge_ec2",
            "aws_security_group.cloudforge",
            "aws_subnet.cloudforge_public",
            "aws_vpc.cloudforge",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloudforge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595319278112:internet-gateway/igw-005c0b10628482707",
            "id": "igw-005c0b10628482707",
            "owner_id": "595319278112",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudforge-dev-igw"
            },
            "tags_all": {
              "AutoDestroy": "true",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudforge-dev-igw",
              "Owner": "learning",
              "Project": "CloudForge"
            },
            "vpc_id": "vpc-0ec1ebf8fdfec7682"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "595319278112",
            "id": "igw-005c0b10628482707",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudforge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloudforge_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595319278112:route-table/rtb-01b1d6615cf7f7e7b",
            "id": "rtb-01b1d6615cf7f7e7b",
            "owner_id": "595319278112",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005c0b10628482707",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudforge-dev-public-rt"
            },
            "tags_all": {
              "AutoDestroy": "true",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudforge-dev-public-rt",
              "Owner": "learning",
              "Project": "CloudForge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec1ebf8fdfec7682"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "595319278112",
            "id": "rtb-01b1d6615cf7f7e7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.cloudforge",
            "aws_vpc.cloudforge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloudforge_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04adb037e0ee3a014",
            "region": "us-east-1",
            "route_table_id": "rtb-01b1d6615cf7f7e7b",
            "subnet_id": "subnet-077ae18e28cbe507b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "595319278112",
            "id": "rtbassoc-04adb037e0ee3a014",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.cloudforge",
            "aws_route_table.cloudforge_public",
            "aws_subnet.cloudforge_public",
            "aws_vpc.cloudforge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloudforge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595319278112:security-group/sg-02efba3689b423945",
            "description": "Security group for CloudForge development EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02efba3689b423945",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "CloudForge API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "cloudforge-dev-sg",
            "name_prefix": "",
            "owner_id": "595319278112",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudforge-dev-sg"
            },
            "tags_all": {
              "AutoDestroy": "true",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudforge-dev-sg",
              "Owner": "learning",
              "Project": "CloudForge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec1ebf8fdfec7682"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "595319278112",
            "id": "sg-02efba3689b423945",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudforge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloudforge_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595319278112:subnet/subnet-077ae18e28cbe507b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077ae18e28cbe507b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "595319278112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudforge-dev-public-subnet"
            },
            "tags_all": {
              "AutoDestroy": "true",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudforge-dev-public-subnet",
              "Owner": "learning",
              "Project": "CloudForge"
            },
            "vpc_id": "vpc-0ec1ebf8fdfec7682"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "595319278112",
            "id": "subnet-077ae18e28cbe507b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.cloudforge"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudforge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:595319278112:vpc/vpc-0ec1ebf8fdfec7682",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e6aad2c2bda2488",
            "default_route_table_id": "rtb-0f9cfbcb28f7a63cb",
            "default_security_group_id": "sg-03e3d5c50ce1b0801",
            "dhcp_options_id": "dopt-0e29aa7552cabf4c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec1ebf8fdfec7682",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9cfbcb28f7a63cb",
            "owner_id": "595319278112",
            "region": "us-east-1",
            "tags": {
              "Name": "cloudforge-dev-vpc"
            },
            "tags_all": {
              "AutoDestroy": "true",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "cloudforge-dev-vpc",
              "Owner": "learning",
              "Project": "CloudForge"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "595319278112",
            "id": "vpc-0ec1ebf8fdfec7682",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}